2007-09-09	kaffeetisch

	* t/GdkWindow.t: Fix a reported test failure in the
	get_decorations() checks.

2007-08-13	kaffeetisch

	* xs/GdkEvent.xs
	* xs/GdkPixbuf.xs
	* xs/GtkTreeModel.xs: Alter some type names in the POD so that
	Glib::GenPod recognizes them.

2007-08-01	kaffeetisch

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.155.

2007-08-01	kaffeetisch

	* MANIFEST: Add forgotten maps_pango-1.18.  Its absence caused
	compilation errors.  (Reported by Thierry Vignaud)

	* t/Gdk.t: Fix incorrect skip count.

	* t/GtkTooltips.t: Fix test failure due to change of semantics in
	gtk+.

2007-07-29	kaffeetisch

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.154.

2007-07-29	kaffeetisch

	* Makefile.PL: Don't print how many XS files were loaded from
	which XS file list.

2007-07-22	kaffeetisch

	* t/GdkColor.t
	* xs/GdkColor.xs: Wrap gdk_color_to_string.

	* t/GdkDisplay.t
	* xs/GdkDisplay.xs: Wrap gdk_display_supports_composite.

	* t/GdkPixbuf.t
	* xs/GdkPixbuf.xs: Wrap gdk_pixbuf_apply_embedded_orientation.

	* t/GdkWindow.t
	* xs/GdkWindow.xs: Wrap gdk_window_set_composited.

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Wrap gtk_icon_view_set_tooltip_item,
	gtk_icon_view_set_tooltip_cell, gtk_icon_view_get_tooltip_context,
	gtk_icon_view_set_tooltip_column, and
	gtk_icon_view_get_tooltip_column.

	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap gtk_tooltip_set_tip_area.

	* t/GtkTreeView.t
	* xs/GtkTreeView.xs: Wrap gtk_tree_view_set_tooltip_row,
	gtk_tree_view_set_tooltip_cell, gtk_tree_view_get_tooltip_context,
	gtk_tree_view_set_tooltip_column, and
	gtk_tree_view_get_tooltip_column.

	* t/PangoAttributes.t
	* xs/PangoAttributes.xs: Bless the array used to represent
	PangoColor so it becomes possible to call methods on it.
	Introduce some stack fiddling so you can use
	Gtk2::Pango::Color::to_string as a method and a class function.

	* xs/PangoMatrix.xs: Since pango uses GSlice starting with 1.12,
	use g_slice_new0 instead of g_new0 in Gtk2::Pango::Matrix::new